tests/vertical-slice/accept/for_range_regression.hew
fn main() -> i64 {
    var sum: i64 = 0;
    for i in 0..7 {
        sum = sum + i;
    }
    return sum;
}
