tests/vertical-slice/reject/labeled_break_unknown_label.hew
fn main() {
    @outer: for i in 0 .. 1 {
        break @nonexistent;
    }
}
